--- a/src/pages/bookingpage.css
+++ b/src/pages/bookingpage.css
@@ -2,16 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  min-height: 100vh;
+  height: 100vh;
   box-sizing: border-box;
+  overflow: hidden; 
 }
 
 .logo__booking {
   width: 76px;
   height: auto;
   margin-top: 1rem;
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
+  flex-shrink: 0; 
 }
 
 .booking__title {
@@ -19,5 +20,6 @@
   color: var(--font-color-main);
   font-size: var(--font-size-title);
   letter-spacing: 0.1em;
-	margin-bottom: 1rem;
+  margin-bottom: 1rem;
+  flex-shrink: 0;
 }
