--- a/src/pages/landingpage.css
+++ b/src/pages/landingpage.css
@@ -1,26 +1,42 @@
 .landingpage {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+.center-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto; 
+}
+
+
+.nav-button-container {
+  margin-top: auto; 
+  width: 100%;
+  max-width: 340px;
+  margin-bottom: 2rem; 
 }
 
 .logo__landing {
-	height: 196px;
-	width: 136px;
+  height: 196px;
+  width: 136px;
 }
 
 .title__landing {
-	font-size: 80px;
-	font-family: 'BebasNeue';
-	letter-spacing: .4rem;
-	color: var(--font-color-main);
+  font-size: 80px;
+  font-family: 'BebasNeue';
+  letter-spacing: .4rem;
+  color: var(--font-color-main);
 }
 
 .subtitle__landing {
-	font-size: 20px;
-	font-family: 'WorkSans';
-	letter-spacing: .7rem;
-	color: var(--purple-color);
+  font-size: 20px;
+  font-family: 'WorkSans';
+  letter-spacing: .7rem;
+  color: var(--purple-color);
 }
