--- a/src/components/bookform.css
+++ b/src/components/bookform.css
@@ -5,6 +5,28 @@
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 20px;
+	letter-spacing: .1rem;
+	display: flex;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  max-width: 340px;
+}
+
+.section__title::before {
+  content: '';
+  flex-grow: 1;
+  height: .1rem;
+  background-color: var(--purple-color);
+  margin-right: .5rem;
+}
+
+.section__title::after {
+  content: '';
+  flex-grow: 1;
+  height: .1rem;
+  background-color: var(--purple-color);
+  margin-left: .5rem;
 }
 
 .book__form {
@@ -45,6 +67,13 @@ label {
   color: var(--purple-color);
   margin-bottom: .3rem;
   width: 100%;
+	display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.label__time {
+	margin-bottom: .3rem;
 }
 
 .form__input {
@@ -72,8 +101,8 @@ label {
 
 .price__summary {
   width: 100%;
-  max-width: 350px;
-  padding: 20px;
+  max-width: 340px;
+  padding: 15px 15px 15px;
   border: 2px solid var(--font-color-main);
   margin: 1rem auto 0;
   box-sizing: border-box;
@@ -84,7 +113,8 @@ label {
   font-family: 'BebasNeue';
   font-size: var(--font-size);
   letter-spacing: .1rem;
-  text-align: center;
+  display: flex;
+	justify-content: space-between;
 }
 
 .button__wrapper {
