--- a/src/components/bookform.css
+++ b/src/components/bookform.css
@@ -190,7 +190,7 @@ label {
 	gap: 10px;
 }
 
-.modal__button--retry {
+.modal__button-retry {
 	background-color: var(--font-color-main);
 	color: white;
 	font-family: 'BebasNeue';
