--- a/src/pages/confirmationpage.css
+++ b/src/pages/confirmationpage.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 0 20px;
   min-height: 100vh;
   box-sizing: border-box;
 }
@@ -12,6 +12,7 @@
   height: auto;
   margin-top: 1rem;
 	margin-bottom: 1rem;
+	flex-shrink: 0; 
 }
 
 .confirmation__title {
